ingress-resource-ssl.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.example.com
    secretName: example-api-tls
  rules:
  - host: api.example.com
    http:
      paths:
      - backend:
          serviceName: payment-service
          servicePort: 80
        path: /(|$)(.*)
      - backend:
          serviceName: blockchain-query-service
          servicePort: 80
        path: /blockchain(/|$)(.*)
      - backend:
          serviceName: payment-service
          servicePort: 80
        path: /payment(/|$)(.*)
