ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: api.example.com
    http:
      paths:
      - backend:
          serviceName: payment-service
          servicePort: 80
        path: /(|$)(.*)
      - backend:
          serviceName: blockchain-query-service
          servicePort: 80
        path: /blockchain(/|$)(.*)
      - backend:
          serviceName: payment-service
          servicePort: 80
        path: /payment(/|$)(.*)
